[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geopytools"
version = "1.0.0"
description = "A Python package for geospatial tools"
authors = [
    { name = "Your Name", email = "youremail@example.com" }
]
dependencies = [
    "numpy",
    "requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
python_requires = ">=3.6"
